Adding max_veh_speed as required parameter. Adding mutexes. Adding C++11 support.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,15 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(pacmod_game_control)
+
+add_definitions(-std=c++11)
+
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
   message_generation
   pacmod
+  joy
 )
 
 catkin_package(
