--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>pacmod</build_depend>
+  <build_depend>joy</build_depend>
     
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
@@ -20,4 +21,5 @@
   <run_depend>message_generation</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>pacmod</run_depend>
+  <run_depend>joy</run_depend>
 </package>
