--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>pacmod_game_control</name>
   <version>2.0.0</version>
   <description>ROS Package for controlling the AStuff PACMod with a Joystick</description>
@@ -9,15 +9,9 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>roscpp</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>pacmod_msgs</build_depend>
-  <build_depend>joy</build_depend>
-    
-  <run_depend>roscpp</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>pacmod_msgs</run_depend>
-  <run_depend>joy</run_depend>
+  <depend>roscpp</depend>
+  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>pacmod_msgs</depend>
+  <depend>joy</depend>
 </package>
