First pass - combining and creating framework.
Moving many functions from PublishControlBoardRev2 to PublishControl
because they are common between rev2 and rev3. Creating basic
framework for PublishControlBoardRev3 and adding it to the build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ add_executable(pacmod_game_control_node
   src/pacmod_game_control_node.cpp
   src/startup_checks.cpp
   src/publish_control_board_rev2.cpp
+  src/publish_control_board_rev3.cpp
   src/publish_control.cpp
 )
 
