--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ add_executable(pacmod_game_control_node
   src/publish_control_board_rev2.cpp
   src/publish_control_board_rev3.cpp
   src/publish_control.cpp
+  src/publish_control_factory.cpp
 )
 
 add_dependencies(pacmod_game_control_node
