--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,7 @@ jobs:
           name: Set Up Container
           command: |
             apt-get update && apt-get install openssh-client python-catkin-tools build-essential -y
+            mkdir src_tmp && mv `find -maxdepth 1 -not -name . -not -name src_tmp` src_tmp/ && mv src_tmp src
             git init astuff_sensor_msgs && cd astuff_sensor_msgs && git remote add origin https://github.com/astuff/astuff_sensor_msgs && git config core.sparsecheckout true
             echo "pacmod_msgs/*" >> .git/info/sparse-checkout && git pull origin master --depth=1
             cd ..
@@ -90,6 +91,7 @@ jobs:
           name: Set Up Container
           command: |
             apt-get update && apt-get install openssh-client python-catkin-tools build-essential -y
+            mkdir src_tmp && mv `find -maxdepth 1 -not -name . -not -name src_tmp` src_tmp/ && mv src_tmp src
             git init astuff_sensor_msgs && cd astuff_sensor_msgs && git remote add origin https://github.com/astuff/astuff_sensor_msgs && git config core.sparsecheckout true
             echo "pacmod_msgs/*" >> .git/info/sparse-checkout && git pull origin master --depth=1
             cd ..
