--- a/package.xml
+++ b/package.xml
@@ -5,6 +5,10 @@
   <description>ROS Package for controlling the AStuff PACMod with a Joystick</description>
   <license>MIT</license>
 
+  <url type="website">http://wiki.ros.org/pacmod_game_control</url>
+  <url type="repository">https://github.com/astuff/pacmod_game_control</url>
+  <url type="bugtracker">https://github.com/astuff/pacmod_game_control/issues</url>
+
   <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
   <author email="jdriscoll@autonomoustuff.com">Joe Driscoll</author>
 
