--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,10 +20,15 @@ jobs:
             cd ..
             catkin build
       - run:
+          name: Lint
+          command: |
+            catkin bt --no-deps --make-args roslint
+      - run:
           name: Run Tests
           command: |
-            cd ..
+            source /opt/ros/kinetic/setup.bash
             catkin run_tests
+            catkin_test_results
     working_directory: ~/src
 
   lunar:
@@ -46,10 +51,15 @@ jobs:
             cd ..
             catkin build
       - run:
+          name: Lint
+          command: |
+            catkin bt --no-deps --make-args roslint
+      - run:
           name: Run Tests
           command: |
-            cd ..
+            source /opt/ros/lunar/setup.bash
             catkin run_tests
+            catkin_test_results
     working_directory: ~/src
 
   melodic:
@@ -72,10 +82,15 @@ jobs:
             cd ..
             catkin build
       - run:
+          name: Lint
+          command: |
+            catkin bt --no-deps --make-args roslint
+      - run:
           name: Run Tests
           command: |
-            cd ..
+            source /opt/ros/melodic/setup.bash
             catkin run_tests
+            catkin_test_results
     working_directory: ~/src
 
 workflows:
