--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,9 +68,77 @@ jobs:
             catkin_test_results
     working_directory: ~/src
 
+  kinetic_release:
+    docker:
+      - image: autonomoustuff/docker-builds:kinetic-ros-base
+    steps:
+      - checkout
+      - run:
+          name: Set Up Container
+          command: |
+            apt-get update -qq && apt-get install -y dh-make python-bloom ruby
+            gem install --no-rdoc --no-ri deb-s3
+            source `find /opt/ros -name setup.bash | sort | head -1`
+            mkdir pacmod_game_control && mv `find -maxdepth 1 -not -name . -not -name pacmod_game_control` pacmod_game_control/
+            git clone https://github.com/astuff/astuff_sensor_msgs astuff_sensor_msgs
+            rosdep install --from-paths . --ignore-src -y
+      - run:
+          name: Build
+          command: |
+            bloom-generate rosdebian --os-name ubuntu --os-version xenial --ros-distro kinetic
+            fakeroot debian/rules binary
+      - run:
+          name: Upload
+          command: |
+            cd ..
+            deb-s3 upload -b autonomoustuff-repo -c xenial --preserve-versions $(ls *.deb) --access-key-id=$S3_ACCESS_KEY_ID --secret-access-key=$S3_SECRET_ACCESS_KEY
+    working_directory: ~/src
+
+  melodic_release:
+    docker:
+      - image: autonomoustuff/docker-builds:melodic-ros-base
+    steps:
+      - checkout
+      - run:
+          name: Set Up Container
+          command: |
+            apt-get update -qq && apt-get install -y dh-make python-bloom ruby
+            gem install --no-rdoc --no-ri deb-s3
+            source `find /opt/ros -name setup.bash | sort | head -1`
+            mkdir pacmod_game_control && mv `find -maxdepth 1 -not -name . -not -name pacmod_game_control` pacmod_game_control/
+            git clone https://github.com/astuff/astuff_sensor_msgs astuff_sensor_msgs
+            rosdep install --from-paths . --ignore-src -y
+      - run:
+          name: Build
+          command: |
+            bloom-generate rosdebian --os-name ubuntu --os-version bionic --ros-distro melodic
+            fakeroot debian/rules binary
+      - run:
+          name: Upload
+          command: |
+            cd ..
+            deb-s3 upload -b autonomoustuff-repo -c bionic --preserve-versions $(ls *.deb) --access-key-id=$S3_ACCESS_KEY_ID --secret-access-key=$S3_SECRET_ACCESS_KEY
+    working_directory: ~/src
+
 workflows:
   version: 2
   ros_build:
     jobs:
       - kinetic
       - melodic
+  ros_release:
+    jobs:
+      - kinetic_release:
+          context: ubuntu-pkg-build
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
+      - melodic_release:
+          context: ubuntu-pkg-build
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^[0-9]+\.[0-9]+\.[0-9]+$/
