--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,8 +133,10 @@ workflows:
           filters:
             branches:
               only:
-                - ci_test
-              ignore: /.*/
+                - /ci_test/
+              ignore:
+                - master
+                - /.*/
             tags:
               only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       - melodic_release:
@@ -142,7 +144,9 @@ workflows:
           filters:
             branches:
               only:
-                - ci_test
-              ignore: /.*/
+                - /ci_test/
+              ignore:
+                - master
+                - /.*/
             tags:
               only: /^[0-9]+\.[0-9]+\.[0-9]+$/
