--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,12 +42,10 @@ jobs:
             apt-get update -qq && apt-get install -y fakeroot dh-make python-bloom ruby
             gem install --no-rdoc --no-ri deb-s3
             source `find /opt/ros -name setup.bash | sort | head -1`
-            apt-get install -y apt-transport-s3 awscli --fix-missing
-            aws configure set aws_access_key_id $S3_ACCESS_KEY_ID
-            aws configure set aws_secret_access_key $S3_SECRET_ACCESS_KEY
-            sudo sh -c 'echo "deb [trusted=yes] s3://autonomoustuff-devel-qa $(lsb_release -sc) main" > /etc/apt/sources.list.d/autonomoustuff-devel-qa.list'
+            apt-get install -y apt-transport-https
+            sudo sh -c 'echo "deb [trusted=yes] http://s3.amazonaws.com/autonomoustuff-devel-qa $(lsb_release -sc) main" > /etc/apt/sources.list.d/autonomoustuff-devel-qa.list'
             apt update && rosdep update
-            apt install ros-melodic-pacmod3=1.4.0-0bionic
+            apt install -y ros-melodic-pacmod3=1.4.0-0bionic
             rosdep install --from-paths . --ignore-src -y
       - run:
           name: Build
