--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,6 @@ jobs:
             apt-get update -qq
             source `find /opt/ros -name setup.bash | sort | head -1`
             mkdir pacmod_game_control && mv `find -maxdepth 1 -not -name . -not -name pacmod_game_control` pacmod_game_control/
-            git clone https://github.com/astuff/astuff_sensor_msgs astuff_sensor_msgs
             rosdep install --from-paths . --ignore-src -y
             cd ..
             catkin init
@@ -45,7 +44,6 @@ jobs:
             apt-get update -qq
             source `find /opt/ros -name setup.bash | sort | head -1`
             mkdir pacmod_game_control && mv `find -maxdepth 1 -not -name . -not -name pacmod_game_control` pacmod_game_control/
-            git clone https://github.com/astuff/astuff_sensor_msgs astuff_sensor_msgs
             rosdep install --from-paths . --ignore-src -y
             cd ..
             catkin init
@@ -68,9 +66,43 @@ jobs:
             catkin_test_results
     working_directory: ~/src
 
+  noetic:
+    docker:
+      - image: autonomoustuff/docker-builds:noetic-ros-base
+    steps:
+      - checkout
+      - run:
+          name: Set Up Container
+          command: |
+            apt-get update -qq
+            source `find /opt/ros -name setup.bash | sort | head -1`
+            mkdir pacmod_game_control && mv `find -maxdepth 1 -not -name . -not -name pacmod_game_control` pacmod_game_control/
+            rosdep install --from-paths . --ignore-src -y
+            cd ..
+            catkin init
+            catkin config --extend /opt/ros/$ROS_DISTRO
+      - run:
+          name: Build
+          command: |
+            cd ..
+            catkin build
+      - run:
+          name: Lint
+          command: |
+            catkin build pacmod_game_control --no-deps --make-args roslint
+      - run:
+          name: Run Tests
+          command: |
+            source /opt/ros/noetic/setup.bash
+            cd ..
+            catkin run_tests pacmod_game_control --no-deps
+            catkin_test_results
+    working_directory: ~/src
+
 workflows:
   version: 2
   ros_build:
     jobs:
       - kinetic
       - melodic
+      - noetic
