--- a/package.xml
+++ b/package.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>pacmod_game_control</name>
-  <version>3.1.0</version>
+  <version>3.1.1</version>
   <description>ROS Package for controlling the AStuff PACMod with a Joystick</description>
   <license>MIT</license>
 
-  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
+  <maintainer email="support.as.ap@hexagon.com">AutonomouStuff Support</maintainer>
   <author email="jdriscoll@autonomoustuff.com">Joe Driscoll</author>
 
   <buildtool_depend>catkin</buildtool_depend>
