--- a/package.xml
+++ b/package.xml
@@ -19,6 +19,6 @@
   <depend>roscpp</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
-  <depend>pacmod_msgs</depend>
+  <depend>pacmod3_msgs</depend>
   <depend>joy</depend>
 </package>
