--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
             apt-get update -qq
             source /opt/ros/*/setup.bash
             mkdir pacmod_game_control && mv `find -maxdepth 1 -not -name . -not -name pacmod_game_control` pacmod_game_control/
-            rosdep install --from-paths . --ignore-src -y
+            rosdep update && rosdep install --from-paths . --ignore-src -y
             cd ..
             catkin init
             catkin config --extend /opt/ros/$ROS_DISTRO
