--- a/package.xml
+++ b/package.xml
@@ -1,24 +1,29 @@
 <?xml version="1.0"?>
-<package format="2">
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>pacmod_game_control</name>
-  <version>4.0.0</version>
-  <description>ROS Package for controlling the AStuff PACMod with a Joystick</description>
+  <version>2004.0.0</version>
+  <description>ROS Package for controlling the AStuff PACMod with a gamepad</description>
   <license>MIT</license>
 
-  <url type="website">http://wiki.ros.org/pacmod_game_control</url>
+  <url type="website">https://github.com/astuff/pacmod_game_control</url>
   <url type="repository">https://github.com/astuff/pacmod_game_control</url>
   <url type="bugtracker">https://github.com/astuff/pacmod_game_control/issues</url>
 
   <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
-  <author email="jdriscoll@autonomoustuff.com">Joe Driscoll</author>
+  <author email="ian.colwell@hexagon.com">Ian Colwell</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <build_depend>roslint</build_depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
+  <depend>rclcpp_lifecycle</depend>
 
-  <depend>roscpp</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>pacmod3_msgs</depend>
-  <depend>joy</depend>
+
+  <exec_depend>joy</exec_depend>
+
+  <export><build_type>ament_cmake</build_type></export>
 </package>
