--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,40 +1,42 @@
-version: 2
-jobs:
-  noetic:
-    docker:
-      - image: autonomoustuff/docker-builds:noetic-ros-base
+version: 2.1
+
+commands:
+  ros_build:
     steps:
       - checkout
       - run:
           name: Set Up Container
           command: |
-            apt-get update -qq
+            mkdir $CIRCLE_PROJECT_REPONAME
+            mv `find -maxdepth 1 -not -name . -not -name $CIRCLE_PROJECT_REPONAME` $CIRCLE_PROJECT_REPONAME/
+      - run:
+          name: Install Dependencies
+          command: |
             source /opt/ros/*/setup.bash
-            mkdir pacmod_game_control && mv `find -maxdepth 1 -not -name . -not -name pacmod_game_control` pacmod_game_control/
-            rosdep update && rosdep install --from-paths . --ignore-src -y
-            cd ..
-            catkin init
-            catkin config --extend /opt/ros/$ROS_DISTRO
+            rosdep update
+            rosdep install --from-paths . --ignore-src -y
       - run:
           name: Build
           command: |
+            source /opt/ros/*/setup.bash
             cd ..
-            catkin build
-      - run:
-          name: Lint
-          command: |
-            catkin build pacmod_game_control --no-deps --make-args roslint
+            colcon build
       - run:
           name: Run Tests
           command: |
-            source /opt/ros/noetic/setup.bash
+            source /opt/ros/*/setup.bash
             cd ..
-            catkin run_tests pacmod_game_control --no-deps
-            catkin_test_results
+            colcon test --packages-select $CIRCLE_PROJECT_REPONAME
+            colcon test-result --verbose
+jobs:
+  foxy:
+    docker:
+      - image: autonomoustuff/docker-builds:foxy-ros-base
+    steps:
+      - ros_build
     working_directory: ~/src
 
 workflows:
-  version: 2
   ros_build:
     jobs:
-      - noetic
+      - foxy
